feat: Support passing Substrait plans to `ExecuteQuery` API
Linting + using non-reserved field id

Adding test for substrait compatibility with local scheduler instance

add inline expressio to substrait test

protect substrait support under feature

Adding protoc feature to datafusion-substrait package

Removing protoc feature

Bump rust base version

Rebuild Cargo.lock

spacing

spacing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ datafusion = "51.0.0"
 datafusion-cli = "51.0.0"
 datafusion-proto = "51.0.0"
 datafusion-proto-common = "51.0.0"
+datafusion-substrait = "51.0.0"
 object_store = "0.12"
 prost = "0.14"
 prost-types = "0.14"
