--- a/.github/actions/setup-builder/action.yaml
+++ b/.github/actions/setup-builder/action.yaml
@@ -28,8 +28,8 @@ runs:
     - name: Install protobuf compiler
       shell: bash
       run: |
-        apt-get update
-        apt-get install -y protobuf-compiler
+        sudo apt-get update
+        sudo apt-get install -y protobuf-compiler
     - name: Setup Rust toolchain
       shell: bash
       run: |
