Add AQE planner and execution graph

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ datafusion-cli = "52"
 datafusion-proto = "52"
 datafusion-proto-common = "52"
 datafusion-substrait = "52"
+insta = "1.46"
 object_store = "0.12"
 prost = "0.14"
 prost-types = "0.14"
